crates/keron-lang/tests/corpus/errors/parse/unclosed_interpolation.snap
---
source: crates/keron-lang/tests/harness/mod.rs
assertion_line: 75
---
error: unexpected `"`, expected expression
  --> 1:9
  |
1 | val a = "x = ${1 + 2"
  |         ^
